# minesweeper

./: README.md  pyproject.toml  tasks.py
src/: game_logic.py  main_game.py  square.py
